--- a/机器学习实战笔记/.vscode/settings.json
+++ b/机器学习实战笔记/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "jupyter.jupyterServerType": "local"
+    "jupyter.jupyterServerType": "local",
+    "python.analysis.typeCheckingMode": "off"
     
 }
