--- a/机器学习实战笔记/.vscode/settings.json
+++ b/机器学习实战笔记/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "jupyter.jupyterServerType": "local",
-    "python.analysis.typeCheckingMode": "off"
+    "python.analysis.typeCheckingMode": "off",
+    "wolf.disableHotModeWarning": true
     
 }
